# ChangeLog for net-analyzer/cnet
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cnet/ChangeLog,v 1.2 2003/12/08 21:54:57 rizzo Exp $

  08 Dec 2003; Don Seiler <rizzo@gentoo.org>; cnet-2.0.5.ebuild:
  Fix for Bug 35160: hardwired CFLAGS.  Thanks to Eldad Zack

  08 Dec 2003; Don Seiler <rizzo@gentoo.org>; cnet-2.0.5.ebuild:
  Fix for Bug 35109: Install docs.  Thanks to viktor(at)neotek(dot)hu

*cnet-2.0.5 (01 Aug 2003)

  01 Aug 2003; Don Seiler <rizzo@gentoo.org>; cnet-2.0.5.ebuild,
  files/cnet-2.0.5-gentoo.patch:
  Initial import. Thanks to Mike Gardiner <driver(at)iinet.net.au> for the
  original ebuild.
