@@ -1,5 +1,5 @@
+MD5 82f3bb96b2ee7c0cebd7712823dbd4d4 cnet-2.0.5.ebuild 1085
+MD5 cb7ff2241bf0a6851da7682dbe8d65bc ChangeLog 820
+MD5 8899efc58d31a4b9d03e29473f528a8f metadata.xml 440
 MD5 5fa730e3f767e911187654f6f809257f files/digest-cnet-2.0.5 60
 MD5 652fb332fa98e02524b07ee1561c6182 files/cnet-2.0.5-gentoo.patch 1363
-MD5 20a4df78099ef1df5629d0c2d984b2c3 cnet-2.0.5.ebuild 1042
-MD5 179ea6ecc0de6ae072fc05c7ad36f36e ChangeLog 698
-MD5 8899efc58d31a4b9d03e29473f528a8f metadata.xml 440
