@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cnet/cnet-2.0.5.ebuild,v 1.2 2003/12/08 21:54:57 rizzo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cnet/cnet-2.0.5.ebuild,v 1.3 2004/02/12 22:29:22 rizzo Exp $
 
 DESCRIPTION="Network simulation tool"
 SRC_URI="http://www.csse.uwa.edu.au/cnet/${P}.tgz"
@@ -11,7 +11,8 @@ SLOT="0"
 KEYWORDS="~x86"
 IUSE=""
 
-DEPEND=">=dev-lang/tk-8.3.4"
+DEPEND=">=dev-lang/tk-8.3.4
+		|| ( dev-libs/elfutils dev-libs/libelf )"
 #RDEPEND=""
 
 # unpacking the source
