@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/cnet
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cnet/ChangeLog,v 1.2 2003/12/08 21:54:57 rizzo Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cnet/ChangeLog,v 1.3 2004/02/12 22:29:22 rizzo Exp $
+
+  12 Feb 2004; Don Seiler <rizzo@gentoo.org>; cnet-2.0.5.ebuild:
+  Adding OR DEPEND on elfutils/libelf, fixed Bug #37152
 
   08 Dec 2003; Don Seiler <rizzo@gentoo.org>; cnet-2.0.5.ebuild:
   Fix for Bug 35160: hardwired CFLAGS.  Thanks to Eldad Zack
